[tool.poetry]
name = "solace-mail"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "solace_mail"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.95.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
